[package]
name = "global-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
ctrlc = "3.2"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
config = { version = "0.13", features = ["yaml"] }
